2010-11-19	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/loadMACintoDB.pl, pf/UPGRADE: Dropping loadMACintoDB.pl
	script in favor of new node import facility available on CLI or web
	admin.

2010-11-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/t/util.t, pf/lib/pf/import.pm, pf/lib/pf/util.pm, pf/t/all.t,
	pf/t/smoke.t: Fixed a very long standing issue: valid_mac and
	clean_mac didn't properly parse xxxx.xxxx.xxxx formatted MACs.
	Also calling clean_mac on node importation allows it to be more
	tolerant on MAC format input. Added tests!

	* pf/html/admin/check_login.php, pf/html/admin/common/adminperm.inc, 
	pf/html/admin/common/helpers.inc, pf/html/admin/common.php: Removed php
	script terminators (?>) from included files since they are not required
	and cause problems (newlines after them corrupt jpgraph's graphics)

2010-11-16	Regis Balzard <rbalzard@inverse.ca>
	* pf/bin/pfcmd: Added a log to indicate which service and command is 
	called. This would help debugging.

2010-11-16	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/node/import.php, pf/lib/pf/import.pm, pf/bin/pfcmd,
	pf/conf/ui.conf, pf/html/admin/check_login.php, 
	pf/html/admin/common/helpers.inc, pf/html/admin/node/help.html,
	pf/lib/pf/pfcmd/help.pm, pf/lib/pf/pfcmd.pm: Node importation through 
	CLI and Web Administration. Automatically registers nodes on 
	importation.

2010-11-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: Added a Gentoo DHCP fingerprint

2010-11-10	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/locale/en/LC_MESSAGES/packetfence.po,
	pf/conf/locale/fr/LC_MESSAGES/packetfence.po: Tells users to reboot if
	they are behind a phone.

2010-11-08	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: Added D-Link, Trendnet and Belkin
	Wireless Router fingerprints and removed the Fluke one (conflicted
	with Belkin and I wasn't sure of the source of the fluke one). Thanks
	to David LaPorte for the fingerprints!
